src/main/java/tk/skuro/idea/orgmode/parser/Org.bnf
{
  parserClass="tk.skuro.idea.orgmode.parser.OrgParser"

  extends="tk.skuro.idea.orgmode.psi.OrgPsiElementImpl"

  psiClassPrefix="Org"
  psiImplClassSuffix="Impl"
  psiPackage="tk.skuro.idea.orgmode.psi"
  psiImplPackage="tk.skuro.idea.orgmode.psi.impl"

  elementTypeHolderClass="tk.skuro.idea.orgmode.parser.OrgTokenTypes"
  elementTypeClass="tk.skuro.idea.orgmode.parser.OrgTokenType"
  tokenTypeClass="tk.skuro.idea.orgmode.parser.OrgElementType"
}

orgFile ::= item_*

private item_ ::= (COMMENT|KEYWORD|CODE|PROPERTIES|WHITE_SPACE|UNMATCHED_DELIMITER|outlineBlock|block|drawer|text_element|verbatim_element|TABLE)

text_element ::= TEXT | UNDERLINE | BOLD | CRLF
verbatim_element ::= VERBATIM

block ::= BLOCK_START BLOCK_CONTENT* BLOCK_END
drawer ::= DRAWER_DELIMITER DRAWER_CONTENT* DRAWER_DELIMITER
outlineBlock ::= OUTLINE

TABLE ::= (TABLE_HEADER | TABLE_ROW) TABLE_ROW*
